force-app/main/default/objects/Contract/fields/Amendment_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Expiration__c</fullName>
    <label>Amendment Expiration</label>
    <type>Date</type>
</CustomField>