force-app/main/default/objects/Contract/fields/Amendment_Expiration_or_Today_2_weeks__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Expiration_or_Today_2_weeks__c</fullName>
    <formula>IF(ISBLANK(Billing_Pause_Expiration__c),TODAY()+14,Billing_Pause_Expiration__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amendment Expiration or Today +2 weeks</label>
    <type>Date</type>
</CustomField>