force-app/main/default/objects/Contract/fields/Amendment_Status__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Status__c</fullName>
    <label>Amendment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amendment In Force</fullName>
                <label>In Force</label>
            </value>
            <value>
                <fullName>Processing Amendment</fullName>
                <label>Processing</label>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>