force-app/main/default/objects/Contract/fields/Appliance_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Appliance_Ship_Date__c</fullName>
    <description>What date was this appliance shipped?</description>
    <label>Appliance Ship Date (Appliance 1)</label>
    <type>Date</type>
</CustomField>