force-app/main/default/objects/Contract/fields/Appliance_Ship_Date_Appliance_2_opt__c.field-meta.xml
<CustomField>
    <fullName>Appliance_Ship_Date_Appliance_2_opt__c</fullName>
    <description>In the event that a second box is shipped, this is the ship date.</description>
    <label>Appliance Ship Date (App. 2 - opt.)</label>
    <type>Date</type>
</CustomField>