force-app/main/default/objects/Contract/fields/Approval_Request_Notes__c.field-meta.xml
<CustomField>
    <fullName>Approval_Request_Notes__c</fullName>
    <label>Approval Request Notes</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>