force-app/main/default/objects/Contract/fields/AVA_SFCPQ__Transport__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Transport__c</fullName>
    <inlineHelpText>This specifies who is responsible for transport of the goods on the transaction</inlineHelpText>
    <label>Transport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVA_SFCPQ__AvalaraTransport</valueSetName>
    </valueSet>
</CustomField>