force-app/main/default/objects/Contract/fields/Billed_Under__c.field-meta.xml
<CustomField>
    <fullName>Billed_Under__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billed Under</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contracts (Billed Under)</relationshipLabel>
    <relationshipName>Contracts_Billed_Under</relationshipName>
    <type>Lookup</type>
</CustomField>