force-app/main/default/objects/Contract/fields/Billing_Pause_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Billing_Pause_Expiration__c</fullName>
    <label>Billing Pause Expiration</label>
    <type>Date</type>
</CustomField>