force-app/main/default/objects/Contract/fields/Billing_Pause_Owner__c.field-meta.xml
<CustomField>
    <fullName>Billing_Pause_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Pause Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>