force-app/main/default/objects/Contract/fields/Billing_Pause_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Pause_Status__c</fullName>
    <label>Billing Pause Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Processing Pause</fullName>
                <label>Processing</label>
            </value>
            <value>
                <fullName>Received Signature</fullName>
                <label>In Force</label>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>