force-app/main/default/objects/Contract/fields/Change_Requestor__c.field-meta.xml
<CustomField>
    <fullName>Change_Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>