force-app/main/default/objects/Contract/fields/Client_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Onboarding_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this process been kicked off? Checklist completed? Checklist should be attached to Contract.</description>
    <label>Client Onboarding Status</label>
    <type>Checkbox</type>
</CustomField>