force-app/main/default/objects/Contract/fields/Co_Marketing_Agreement_2__c.field-meta.xml
<CustomField>
    <fullName>Co_Marketing_Agreement_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is a Co-Marketing Agreement necessary? Do we have it?</description>
    <label>Co-Marketing Agreement</label>
    <type>Checkbox</type>
</CustomField>