force-app/main/default/objects/Contract/fields/Confidentiality_Svcs_Data_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Svcs_Data_Sheet__c</fullName>
    <description>Confidentiality Services Data Sheet</description>
    <label>Confidentiality Svcs Data Sheet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>