force-app/main/default/objects/Contract/fields/Consolidated_Quote__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as Part for BIZ-47457. To store the consolidated quote in case of renewal contract consolidation.</description>
    <label>Consolidated Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Contracts (Consolidated Quote)</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>