force-app/main/default/objects/Contract/fields/Consulting_Dollars_non_Tsunami__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Dollars_non_Tsunami__c</fullName>
    <description>Dollars proposed for non-Tsunami consultant partners to provide.</description>
    <label>Partner Consulting Dollars</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>