force-app/main/default/objects/Contract/fields/Contingency_Type__c.field-meta.xml
<CustomField>
    <fullName>Contingency_Type__c</fullName>
    <description>Multi-select field to pick contingencies associated with this contract.</description>
    <inlineHelpText>ROR - Customer must communicate negative action
POC - Customer must communicate positive action
Software Feature Delivery
Services
T&amp;C - Right to retain certain conditions
Payment Terms - non-standard terms
Payment Delayed - no payment received</inlineHelpText>
    <label>Contingency Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ROR</fullName>
            </value>
            <value>
                <fullName>POC</fullName>
            </value>
            <value>
                <fullName>Software Feature Delivery</fullName>
            </value>
            <value>
                <fullName>Services Delivery</fullName>
            </value>
            <value>
                <fullName>Terms &amp; Conditions</fullName>
            </value>
            <value>
                <fullName>Payment Terms</fullName>
            </value>
            <value>
                <fullName>Payment Delayed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>