force-app/main/default/objects/Contract/fields/Contract_Master_Terms2__c.field-meta.xml
<CustomField>
    <fullName>Contract_Master_Terms2__c</fullName>
    <description>This field will denote the Contract Master Term &amp; will get the value from Quote object.</description>
    <label>Contract Master Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>