force-app/main/default/objects/Contract/fields/Contract_Master_Terms__c.field-meta.xml
<CustomField>
    <fullName>Contract_Master_Terms__c</fullName>
    <description>Built according to BIZ-47359</description>
    <label>Contract Master Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contract_Master_Terms</valueSetName>
    </valueSet>
</CustomField>