force-app/main/default/objects/Contract/fields/Contracted_Amendment_Date__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Amendment_Date__c</fullName>
    <description>The amended date for the contingent deal.</description>
    <inlineHelpText>Has the deadline been extended?</inlineHelpText>
    <label>Contracted Amendment Date</label>
    <type>Date</type>
</CustomField>