force-app/main/default/objects/Contract/fields/Custom_Terms__c.field-meta.xml
<CustomField>
    <fullName>Custom_Terms__c</fullName>
    <description>To fill in some special language items.</description>
    <label>Custom Terms</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>