force-app/main/default/objects/Contract/fields/Customer_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>Customer_Form_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Each contract should have a New Customer (or Customer Data, if existing) attached</description>
    <label>Customer Form Received</label>
    <type>Checkbox</type>
</CustomField>