force-app/main/default/objects/Contract/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <description>Custom field made to populate the Deal type on contract record from op4i.
Built according to US # BIZ-46098
Edited and added values on the basis of BIZ-47145, API values edited according to BIZ-46894</description>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquired_Contract</fullName>
                <label>Acquired Contract</label>
            </value>
            <value>
                <fullName>AddOn</fullName>
                <label>Add-On</label>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Contract_Replacement</fullName>
                <label>Contract Replacement</label>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>New_Software</fullName>
                <label>New Software</label>
            </value>
            <value>
                <fullName>Next Year_Multi-Year</fullName>
                <label>Next Year, Multi-Year</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Platform Conversion_INTERNAL</fullName>
                <label>Platform Conversion - Internal</label>
            </value>
            <value>
                <fullName>Platform_Fee</fullName>
                <label>Platform Fee</label>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Services_Only</fullName>
                <label>Services Only</label>
            </value>
            <value>
                <fullName>Services_Replacement</fullName>
                <label>Services Replacement</label>
            </value>
            <value>
                <fullName>Uplift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>