force-app/main/default/objects/Contract/fields/Entitled_to_Permanent_License__c.field-meta.xml
<CustomField>
    <fullName>Entitled_to_Permanent_License__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When payment is received, the customer is then entitled to receive a permanent license from the SE team.</description>
    <label>Entitled to Permanent License (Paid)</label>
    <type>Checkbox</type>
</CustomField>