force-app/main/default/objects/Contract/fields/Escrow_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Agreement__c</fullName>
    <label>Escrow Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>