force-app/main/default/objects/Contract/fields/Escrow_Commitments__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Commitments__c</fullName>
    <label>Escrow Commitments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>