force-app/main/default/objects/Contract/fields/Exception_Approver_3__c.field-meta.xml
<CustomField>
    <fullName>Exception_Approver_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exception Approver 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Exception_Approver_3_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>