force-app/main/default/objects/Contract/fields/External_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>External_Notification_Sent__c</fullName>
    <label>External Notification Sent</label>
    <type>DateTime</type>
</CustomField>