force-app/main/default/objects/Contract/fields/Future_Lawyer_FE_Uplift_Commitments__c.field-meta.xml
<CustomField>
    <fullName>Future_Lawyer_FE_Uplift_Commitments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Future Pricing Commitment</label>
    <type>Checkbox</type>
</CustomField>