force-app/main/default/objects/Contract/fields/Includes_modification_to_contract_term__c.field-meta.xml
<CustomField>
    <fullName>Includes_modification_to_contract_term__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Includes modification to multi-year / initial term?</description>
    <inlineHelpText>Does this OSA cancel an agreement before the end of the current term? The current term relates to both the “Initial Term” and “Renewal Term.”</inlineHelpText>
    <label>Includes modification to contract term?</label>
    <type>Checkbox</type>
</CustomField>