force-app/main/default/objects/Contract/fields/Includes_platform_deployment_conversion__c.field-meta.xml
<CustomField>
    <fullName>Includes_platform_deployment_conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Includes platform/deployment conversion?</description>
    <inlineHelpText>Includes platform/deployment conversion?</inlineHelpText>
    <label>Includes platform/deployment conversion?</label>
    <type>Checkbox</type>
</CustomField>