force-app/main/default/objects/Contract/fields/Includes_Termination_Clause__c.field-meta.xml
<CustomField>
    <fullName>Includes_Termination_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Includes termination clause without significant or substantive penalty clause?</description>
    <inlineHelpText>Does the OSA for a multi-year deal include any form of cancellation rights for client prior to completion of the Initial Term?</inlineHelpText>
    <label>Includes Termination Clause?</label>
    <type>Checkbox</type>
</CustomField>