force-app/main/default/objects/Contract/fields/Initial_Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Term_End_Date__c</fullName>
    <label>Initial Term End Date</label>
    <type>Date</type>
</CustomField>