force-app/main/default/objects/Contract/fields/Installation_Setup_Project__c.field-meta.xml
<CustomField>
    <fullName>Installation_Setup_Project__c</fullName>
    <description>What project is included in the quote&apos;s Installation &amp; Setup line?</description>
    <label>Installation &amp; Setup Project</label>
    <type>TextArea</type>
</CustomField>