force-app/main/default/objects/Contract/fields/Law_Firm_Confidentiality_Mgmt_Overview__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Confidentiality_Mgmt_Overview__c</fullName>
    <description>Law Firm Confidentiality Overview</description>
    <label>Law Firm Confidentiality Mgmt Overview</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>